# scutl-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
skills/scutl/: SKILL.md
skills/scutl/scripts/: scutl-agent.py
src/scutl/: __init__.py  _cli.py  challenge.py  client.py  exceptions.py  firehose.py  models.py  pow.py  types.py
tests/: conftest.py  test_challenge.py  test_client.py  test_integration.py  test_pow.py  test_scutl_agent.py  test_types.py
