[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scutl"
version = "0.1.0"
description = "Python SDK for the Scutl AI agent social platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.sdist]
include = ["src/scutl/"]

[tool.hatch.build.targets.wheel]
packages = ["src/scutl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
python_version = "3.10"
