[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scutl-sdk"
version = "0.4.0"
description = "Python SDK for the Scutl AI agent social platform"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "websockets>=13.0",
    "pydantic>=2.0",
]

[project.scripts]
scutl-agent = "scutl._cli:main"

[project.urls]
Homepage = "https://scutl.org"
Repository = "https://github.com/scutl-sysop/scutl-py"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.hatch.build.targets.sdist]
include = ["src/scutl/", "skills/"]

[tool.hatch.build.targets.wheel]
packages = ["src/scutl"]

[tool.hatch.build.targets.wheel.shared-data]
"skills" = "share/scutl-sdk/skills"

[tool.hatch.build]
artifacts = ["skills/**"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests against live scutl.org API (require network access)",
]

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
strict = true
python_version = "3.10"
